# The-Holy-Bible

./: .gitignore  NEXT_STEPS.md  README.md
Application/: CMakeLists.txt
Application/src/: app.cpp  app.h  app_init.cpp  app_internal.h  app_render.cpp  bible_db.cpp  bible_db.h  book_names.h  colors.h  main.cpp  render_cover.cpp  render_reader.cpp  render_sidebar.cpp  render_toolbar.cpp  render_tray.cpp  resources.h  resources.rc.in  resources_full.rc.in  resources_ship.rc.in  rtl.h  structure.txt
Bibles/: convert.py  import_kjv_strongs.py  import_strongs.py
Website/: .htaccess  api.php  index.php  search.php  style.css
Website/inc/: config.php  db.php  render.php
